--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -1,3 +1,6 @@
+<!--<style type="text/css">@import "css/jquery.svg.css";</style> -->
+<!--<script type="text/javascript" src="js/jquery.svg.js">-->
+<!--<script type="text/javascript" src="js/jquery.svganim.pack.js">-->
 <SCRIPT language="JavaScript">
 
 function place_cookie(valid, cookie, url)
@@ -19,32 +22,28 @@ function delete_cookie()  {
 
 $(document).ready(function(){
   $('#uname').focus();
+  pageObj = new Object();
+  pageObj.index=Math.floor(Math.random()*10);
+  cross_fade();
   <TMPL_VAR NAME=READY>
 });
 
+//$('#nav').svg({onLoad: drawIntro}); 
 
+function drawIntro(svg) {
+svg.circle(75, 75, 50, 
+        {fill: 'none', stroke: 'red', strokeWidth: 3}); 
+    var g = svg.group({stroke: 'black', strokeWidth: 2}); 
+    svg.line(g, 15, 75, 135, 75); 
+    svg.line(g, 75, 15, 75, 135); 
 
-function timing(num,stop){
-  //alert(num);
-  //alert("show_info(['args__'+num],[display_info]),800");
-  num = "\""+num+"\"";
-  if (stop == 1){
-   clearTimeout(pageObj.time);}
-  else{
-   pageObj.time = setTimeout("show_summary("+num+")",600);
-    }
-  //$('#'+id).mouseout(clearTimeout(time));
 }
 
 
-function show_summary(id) {
-  $('#summary').hide();
-  var popup_size = $('#main').width() * (3/4);
-  var left_padding = ($(window).width() - popup_size) / 2;
-  var html = "<a href='#' onClick=\"$('#summary').slideToggle(pageObj.speed);\" style='float: right;'><img src='/CoGe/picts/delete.png' width='16' height='16' border='0'></a>";
-  html = html + '<br>' + $('#page_info'+id).html();
-  $('#summary').html(html).css("left",''+left_padding).css("top","350").width(popup_size).slideDown(pageObj.speed);
-}
+$(function() {		$("#accordion").accordion({collapsible:true, active: false});	});
+$(function() {		$("#accordion2").accordion({collapsible:true, active: false, disabled:true});	});
+$(function() {		$("#accordion3").accordion({collapsible:true, active: false, disabled:true});	});
+$(function() {		$("#accordion4").accordion({collapsible:true, active: false});	});
 
 function onEnter(e){
   if (!e){ 
@@ -54,53 +53,109 @@ login(['uname', 'pwd','url'],[place_cookie]);
  }
 }
 
+function cross_fade() {
+
+ var pause_time = 10000;
+ var fade_time = 3000;
+ var image = new Array(
+   ["500px-3440_3441.CDS-CDS.blastn.dag_geneorder_D20_g10_A5.1-1.w800.png", "Shewanella baltica strains syntenic dotplot showing an x-alignment","X-alignment"],
+   ["500px-SynPlot-Chr1-At-v-Al.png","Syntenic dotplot of Arabidopsis thaliana versus Arabidopsis lyrata with synonymous mutations","Syntenic_comparison_of_Arabidopsis_thaliana_and_Arabidopsis_lyrata"],
+   ["800px-Master_3068_8.CDS-CDS.blastn_geneorder_D20_g10_A5.w2000.ks.png","Syntenic dotplot of Arabidopsis thaliana vs lyrata","Syntenic_comparison_of_Arabidopsis_thaliana_and_Arabidopsis_lyrata"],
+   ["Master_2361_2360.CDS-CDS.blastn_geneorder_D20_g10_A5.w500.png","Acidovorax syntenic dotplot showing an x-alignment","X-alignment"],
+   ["600px-System_framework.png","CoGe's open-ended interconnected analysis network","CoGe_system_arcitecture"],
+   ["600px-Syntenic_dotplot_medicago_truncatula_v2_vs_v3.png","Comparison of new and old genome assemblies of Medicago truncatula","Syntenic_dotplot_medicago_truncatula_version_3_versus_version_2"],
+   ["Grapevine-peach_K2_historgram.png","Historgram of synonymous mutation values between grape and peach","Syntenic_dotplot_of_peach_versus_grape"],
+   ["k12-CDS-aa-usage.png","E. coli's amino acid usage as a function of CDS GC content","CodeOn"],
+   ["600px-Plasmodium-codon-substitution-matirx.png", "Codon substitution matrix of two Plasmodia species","Plasmodia_comparative_genomics"],
+   ["Plasmodium_knowlesi_cds_gc_content_histogram.png", "GC content distribution for all protein sequences of a Plasmodium species","Plasmodia_comparative_genomics"],
+   ["800px-Human-mouse-tandem-gene-duplication.png","Human-mouse syntenic comparison showing a conserved tandem gene cluster","Local_Gene_Duplication"],
+   ["600px-SynPlot-Chr1-At-v-Al.png", "Synonymous mutation histogram of syntenic genes between two species of Arabidopsis showing orthologous pairs and those derived from a shared whole genome duplication event","Syntenic_comparison_of_Arabidopsis_thaliana_and_Arabidopsis_lyrata"],
+   ["600px-CoGeBlast-At1g02120-eval.png", "CoGeBlast evaluating potential homologous hits", "Phylogenetics_in_CoGe#Evaluate_potential_homologs_in_CoGeBlast_and_select_the_.22good.22_ones"],
+   ["600px-Phylogeny_fr_PhyML.png","Linking to phylogeny.fr for one-click phylogenetics","Phylogenetics_in_CoGe#Send_sequences_to_phylogeny.fr"],
+   ["500px-Reconstructingchromosomes.png", "Reconstruting maize chromosomes through syntenic dotplot comparisons to sorghum", "Splitting_maize_genome"],
+   ["FeatMap-screenshot.png", "Identifying genomic distributions of gene families", "GenomeMap"],
+   ["GEvo-ecoli-insertion-direct-repeats.png", "Identifying direct repeats flanking an insertion in E. coli", " Analysis_of_variations_found_in_genomes_of_Escherichia_coli_strain_K12_DH10B_and_strain_B_REL606_using_SynMap_and_GEvo_analysis#High-resolution_GEvo_analysis_of_an_insertion:_finding_direct_sequence_repeats"],
+   ["800px-GeLo-nucleotides.png", "Visualizing individual nucleotides with GenomeView", "GenomeView_examples#Chromosome_Background"],
+   ["800px-GenomeView_GEvo-links.png", "Visualizing variation in GC content and links for syntenic gene analyses", "GenomeView_examples#GEvo_Links"],
+   ["600px-Maize-sorghum-cns.png", "Identifying fractionation and conserved non-coding sequences in maize and sorghum", "Maize_Sorghum_Syntenic_dotplot"],
+   ["gevo-synteny.png", "High-resolution sequence analysis of syntenic regions of Arabidopsis derived from its most recent genome duplication event.", "Syntenic_comparison_of_Arabidopsis_thaliana_and_Arabidopsis_lyrata"],
+   ["GenomeView-MG1655.png", "Visualizing a prophage insertion in E. coli K12 MG1655 by differences in genome structure", "Horizontal_Gene_Transfer"]
+
+   
+
+  );
+  var index = pageObj.index;
+  $('#crossfade').fadeOut(fade_time);
+  link ="http://genomevolution.org/wiki/index.php/"+image[index][2];
+  newStuff="<div onclick=window.open('"+link+"')><img style='width: 400px; height: 225px' src='./picts/home_page/"+image[index][0]+"'><br><div style='width:400; text-align:center'>"+image[index][1]+"</div></div>";
+  setTimeout("$('#crossfade').html(newStuff)", fade_time);
+  $('#crossfade').fadeIn(fade_time);
+  index=Math.floor(Math.random()*image.length);
+
+  if (index == image.length) {index=0};
+  pageObj.index=index;  
+  setTimeout("cross_fade();",pause_time);
+
+}
 
 
 </SCRIPT>
 
-<div id=summary style="class="image_window"></div>
-<div id=main align=center>
+<div id=nav></div>
 
 <TMPL_IF NAME="INTRO">
-<div style="width: 600px"><div><a href="/CoGe/GEvo.pl?prog=blastz;accn1=at1g07300;fid1=4091274;dsid1=556;chr1=1;dr1up=20000;dr1down=20000;gbstart1=1;gblength1=772;accn2=at2g29640;fid2=4113333;dsid2=557;chr2=2;dr2up=20000;dr2down=20000;gbstart2=1;rev2=1;num_seqs=2;autogo=1"><img src="/CoGe/picts/gevo-synteny.png" width=500px border=0 ></a></div><div align = center class="small species"><a href="/CoGe/GEvo.pl?prog=blastz;accn1=at1g07300;fid1=4091274;dsid1=556;chr1=1;dr1up=20000;dr1down=20000;gbstart1=1;gblength1=772;accn2=at2g29640;fid2=4113333;dsid2=557;chr2=2;dr2up=20000;dr2down=20000;gbstart2=1;rev2=1;num_seqs=2;autogo=1">GEvo analysis</a> of syntenic regions of Arabidopsis derived from its most recent genome duplication event.</div><p align=center>CoGe is a comparative genomics platform designed to allow easy access to genomic data from any organism and provide analysis tools for finding and comparing homologous sequences from multiple genomic regions.  If you are new to CoGe, we recommend visiting <a href="http://synteny.cnr.berkeley.edu/wiki/index.php/">CoGePedia</a></p>
+
+<div>
+
+<div style="float:left">
+What is CoGe?<br>
+<div id="accordion" style="font-size: 0.7em">
+    <h3><a href="#">CoGe is a comparative genomics platform for all genomes across all domains of life in any state of assembly</a></h3>
+    <div><img class ="ui-corner-all ui-widget-content" style="width: 80%" src=./picts/home_page/OrganismView-search.png><br>Searching for organisms with "proteo" in their taxonomic description.<br><span class=link onclick="window.open('/CoGe/OrganismView.pl?org_desc=proteo')">Open this search in OrganismView</span></div>
+    <h3><a href="#">CoGe allows you to easily find and analyze genomic data from any organism</a></h3>
+    <div><img class ="ui-corner-all ui-widget-content" style="width: 80%" src=./picts/home_page/GenomeView-MG1655.png><br>Visualizing a prophage insertion in E. coli K12 MG1655 by differences in genome structure and GC3 content.<br><span class=link onclick="window.open('/CoGe/GenomeView.pl?z=7&x=570000&dsgid=4242&chr=1')">Visualize this genomic region in GenomeView</span></div>
+    <h3><a href="#">CoGe provides analysis tools for finding and comparing homologous sequences from any set of organisms</a></h3>
+    <div><img class ="ui-corner-all ui-widget-content" style="width: 80%" src=./picts/home_page/600px-CoGeBlast-At1g02120-eval.png><br>Using CoGeBlast to find and evaluate potential homologous hits.<br><span class="link" onclick="window.open('/CoGe/CoGeBlast.pl')">Open CoGeBlast</span></div>
+    <h3><a href="#">CoGe allows you to find syntenic regions from between or within any organism</a></h3>
+    <div><img class ="ui-corner-all ui-widget-content" style="width: 50%" src=./picts/home_page/600px-SynPlot-Chr1-At-v-Al.png><br>Syntenic dotplot between chromosome 1 of Arabidopsis thaliana and Arabidopsis lyrata and histogram of synonymous mutation values of syntenic gene pairs.  Different colors and peaks show orthologous gene-pairs and those derived from a shared whole genome duplication event.<br> <span class=link onclick="window.open('/CoGe/SynMap.pl?dsgid1=3068;dsgid2=8;D=20;g=10;A=5;w=0;b=1;ft1=1;ft2=1;dt=geneorder;ks=1;autogo=1')">Generate a syntenic dotplot of these two Arabidopsis species</span></div>
+    <h3><a href="#">CoGe allows high-resolution sequence analysis for multiple genomic regions</a></h3>
+    <div><img class ="ui-corner-all ui-widget-content" style="width: 100%" src=./picts/home_page/600px-Maize-sorghum-cns.png><br>Identifying fractionation and conserved non-coding sequences in maize and sorghum.<br><span class="link" onclick="window.open('/CoGe/GEvo.pl?prog=blastn;spike_len=15;accn1=GRMZM2G039600;fid1=56240081;dsid1=42027;dsgid1=8082;chr1=10;dr1up=95763;dr1down=-74353;ref1=0;accn2=Sb06g020590;fid2=19419168;dsid2=34580;dsgid2=6807;chr2=6;dr2up=136165;dr2down=-116723;ref2=1;accn3=GRMZM2G100815;fid3=56252347;dsid3=42027;dsgid3=8082;chr3=2;dr3up=240339;dr3down=-239410;rev3=1;ref3=0;num_seqs=3;hsp_overlap_limit=0;hsp_size_limit=0;autogo=1')">Run this analysis in GEvo</span></div>
+
+</div>
 </div>
 
-<TABLE class="basic" width=600px>
- <TR>
-  <TH>
-    <DIV class = large>
-      Access Point
-    </DIV>
-  </TH>
-  <TH>
-    <DIV class = large>
-      Description
-    </DIV>
-  </TH>
- </TR>
-<TMPL_LOOP NAME=ACTIONS>
- <TR>
-  <TD WIDTH = 25%>
-   <DIV>
-     <TMPL_VAR NAME=ACTION>
-   </DIV>
-  </TD>
-  <TD>
-   <DIV>
-     <TMPL_VAR NAME=DESC>
-   </DIV>
-  </TD>
- </TR>
- <TR>
-  <TD COLSPAN=2>
-    <HR>
-  </TD>
- </TR>
-</TMPL_LOOP>
-</TABLE>
-<a href="/awstats/awstats.pl?config=CoGe" target=_new class="small" style="text-align: center;">CoGe's usage stats</a>
-</TMPL_IF>
+<div style="float:right">
+If you are new to CoGe:<br>
+<div id="accordion2" style="font-size: 0.7em">
+    <h3 onclick=window.open("http://genomevolution.org/wiki/index.php/New_to_CoGe")><a href="http://genomevolution.org/wiki/index.php/New_to_CoGe">Visit CoGe's getting started page</a></h3>
+    <div></div>
+    <h3 onclick=window.open("http://genomevolution.org/wiki/index.php/Tutorials")><a href="http://genomevolution.org/wiki/index.php/Tutorials">Read or watch tutorials</a></h3>
+    <div></div>
+    <h3 onclick=window.open("http://genomevolution.org/wiki")><a href="http://genomevolution.org/wiki">Get some background information at CoGePedia</a></h3>
+    <DIV></div>
+    <h3 onclick=window.open("http://genomevolution/wiki/index.php/FAQs")><a href="http://genomevolution.org/wiki/index.php/FAQs">Read CoGe's FAQs</a></h3>
+    <div></div>
+<h3 onclick=window.open("http://genomevolution/wiki/index.php/CoGepedia:Current_events")><a href="http://genomevolution.org/wiki/index.php/CoGepedia:Current_events">News about CoGe</a></h3>
+    <div></div>
+</div>
+</div>
 
+<div style="clear: both;"> </div>
+<hr>
+CoGe's Entrance Tools:<br>
+<div style="font-size: .6em; width: 500px">CoGe's unqiue system architecture provides many <a ref="http://genomevolution.org/wiki/index.php/Documentation#Web_Application_Documentation">interconnected tools</a> to create <a ref="http://genomevolution.org/wiki/index.php/Open-ended_Analysis_Network">open-ended analysis networks</a>.  While there is no defined place to start an anlysis on CoGe, here are the common tools used to begin an analysis:</div>
+<div id="accordion3" style="font-size: 0.7em; width: 500px; float: left">
+   <TMPL_LOOP NAME=ACTIONS>
+    <h3 onclick=window.open("<TMPL_VAR NAME=LINK>")><a href="#"><TMPL_VAR NAME=ACTION></a></h3>
+    <div><TMPL_VAR NAME=DESC></div>
+   </TMPL_LOOP>
+</div>
+
+<div id=crossfade style="float: right;"></div>
+<div style="clear: both;"> </div>
+
+
+</TMPL_IF>
 
 <TMPL_IF NAME="LOGIN">
 <DIV align=left>
@@ -122,10 +177,10 @@ login(['uname', 'pwd','url'],[place_cookie]);
 </TMPL_IF>
 
 <TMPL_IF NAME=NSF>
-<br>
 <div align=center>
 <a href="http://www.nsf.gov" target= "_new"><img src="./picts/nsf-logo.gif" border=0><br></a>
 <span class="small">Funding provided by NSF</span>
+<br><a href="/awstats/awstats.pl?config=CoGe" target=_new class="small" style="text-align: center;">CoGe's usage stats</a>
 </div>
 </TMPL_IF>
 
@@ -134,4 +189,3 @@ The CoGe System is undergoing an update.  Please check back in a few hours.
 
 </TMPL_IF>
 
-</div>
