--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -135,7 +135,7 @@ $(document).ready(function(){
 
 function add_to_featlist(featname, featid, gstid){
   //alert(featname+","+featid);
-  var check = $('#'+featid).val();
+  var check = $('#'+featid+"_"+gstid).val();
   if (check){
    alert('You have already added '+featname+'.');
    return;
@@ -143,7 +143,7 @@ function add_to_featlist(featname, featid, gstid){
   var html = '<option id='+featid+'_'+gstid+' value='+featid+'_'+gstid+ ' >'+featname+'</option>';
   //alert(html);
   $('#blank').remove();
-  $('#featlist_choice').append(html).sortSelect();
+  $('#featlist_choice').prepend(html);
   counting();
 }
 
@@ -269,7 +269,7 @@ function search_bar(div_id){
 
 
 </SCRIPT>
-<TABLE class="ui-widget-content">
+<TABLE class="ui-widget-content ui-corner-all">
        <TR>
          <TD nowrap>
            Name:
@@ -307,15 +307,15 @@ function search_bar(div_id){
 	 Description: <input type="text" size=11 value="Search" name = "org_desc" id="org_desc" style="font-style:italic" onFocus="search_bar('org_desc')" onKeyUp='timing("org_desc");'>
 	  <DIV id="org_list"><TMPL_VAR NAME="ORG_LIST"></DIV>
         <tr>
-	<td><span class="ui-button ui-state-default ui-corner-all" onclick="search_chain(1)">Search</span>
-	<td align=right><span class="ui-button ui-state-default ui-corner-all" onclick="$('#feat_list').dialog('open');">Feature List</span>
+	<td><span class="ui-button ui-button-go ui-corner-all" onclick="search_chain(1)">Search</span>
+	<td align=right><span class="ui-button ui-corner-all" onclick="$('#feat_list').dialog('open');">Feature List</span>
 </TABLE>
 
 
 
 
 
- <table id="data_table" style="display:none" class="ui-widget-content">
+ <table id="data_table" style="display:none" class="ui-widget-content ui-corner-all">
  <thead align=left>
   <th>Matches</th>
   <th>Types</th>
@@ -334,7 +334,7 @@ function search_bar(div_id){
  </tbody>
 </TABLE>
 
-<DIV id="anno" class="ui-widget-content"></DIV>
+<DIV id="anno" class="ui-widget-content ui-corner-all"></DIV>
 
 
 <div class="dialog" title="Feature List" id="feat_list">
@@ -343,10 +343,11 @@ function search_bar(div_id){
               <option id=blank value=null>No Feature Selected</option>
               </SELECT>
  <br>
-    <span class="ui-button ui-state-default ui-corner-all" id=send onClick="send_to_FeatList()">Create Feature List</span><br><br>
-    <span class="ui-button ui-state-default ui-corner-all" id=add_all onClick="$('#add_all').hide();$('#add_all_search').html('<img src=./picts/animations/DNA_orbit_animated_small_third.gif >'); cogesearch_featids(['args__accn','accn', 'args__anno','annosearch','args__type','type', 'args__org_id','org_id','args__org_name','org_name','args__org_desc','org_desc'],[add_all]);">Add All Features</SPAN><br><br>
-      <span class="ui-button ui-state-default ui-corner-all" id=remove onClick="$('#'+$('#featlist_choice').val()).remove();counting();">Remove</span><br><br>
-    <span class="ui-button ui-state-default ui-corner-all" id=clear onClick="clear_feat_list()">Clear</span><br>
+    <span class="ui-button ui-corner-all" id=send onClick="$('#featlist_choice').sortSelect();">Sort List Alphabetically</span><br><br>
+    <span class="ui-button ui-corner-all" id=send onClick="send_to_FeatList()">Create Feature List</span><br><br>
+    <span class="ui-button ui-corner-all" id=add_all onClick="$('#add_all').hide();$('#add_all_search').html('<img src=./picts/animations/DNA_orbit_animated_small_third.gif >'); cogesearch_featids(['args__accn','accn', 'args__anno','annosearch','args__type','type', 'args__org_id','org_id','args__org_name','org_name','args__org_desc','org_desc'],[add_all]);">Add All Features</SPAN><br><br>
+      <span class="ui-button ui-corner-all" id=remove onClick="$('#'+$('#featlist_choice').val()).remove();counting();">Remove</span><br><br>
+    <span class="ui-button ui-corner-all" id=clear onClick="clear_feat_list()">Clear</span><br>
 
     <div id=add_all_search></div>
 </div>
