--- a/web/tmpl/box.tmpl
+++ b/web/tmpl/box.tmpl
@@ -1,54 +1,10 @@
 <TMPL_IF NAME=ADJUST_BOX>
-<table align=center border="0" cellspacing="0" cellpadding="0">
+<div id=page_box class="ui-widget-content ui-corner-all">
 <TMPL_ELSE>
-<table WIDTH=<TMPL_VAR NAME=BOX_WIDTH> border="0" cellspacing="0" cellpadding="0">
+<div id=page_box class=" ui-widget-content ui-corner-all">
 </TMPL_IF>
- <tr> 
-  <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
-  <td width="6"  class="boxarttop">&nbsp;</td>
-  <TMPL_IF NAME=ADJUST_BOX>
-  <td   class="boxarttop"><font class="oblique"><TMPL_VAR NAME=BOX_NAME></font></td>
-  <TMPL_ELSE>
-  <td class="boxarttop"><font class="oblique"><TMPL_VAR NAME=BOX_NAME></font></td>
-  </TMPL_IF>
-  <td width="6" class="boxarttop">&nbsp;</td>
-  <td width="6"><img src="/CoGe/picts/table/table_bg_head_tr.png" width="6" height="23"></td>
- </tr>
- <tr> 
-  <td height="9" valign="top" class="boxartleft"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tl.png" width="6" height="9"></td>
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_t.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tr.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" class="boxartright"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
- </tr>
- <tr>
-  <td class="boxartleft">&nbsp;</td>
-  <td background="/CoGe/picts/table/table_bg_body_l.png">&nbsp;</td>
-  <td> 
-<!-- ########################################## -->
-<!-- Main body of the central table goes in here-->
-<!-- ########################################## -->
-<TMPL_IF NAME="BODY"><TMPL_VAR NAME=BODY></TMPL_IF>
-<!-- ########################################## -->
-<!-- ############END MAIN BODY################# -->
-<!-- ########################################## -->
+<TMPL_IF NAME=BOX_NAME><h3 class="ui-helper-reset ui-corner-top" aria-expanded="true" ><TMPL_VAR NAME=BOX_NAME></h3><hr></TMPL_IF>
 
- </td>
-  <td  background="/CoGe/picts/table/table_bg_body_r.png">&nbsp;</td>
-  <td  class="boxartright">&nbsp;</td>
- </tr>
- <tr> 
-  <td height="9" valign="top" class="boxartleft"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_bl.png" width="6" height="9"></td>
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_br.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" class="boxartright"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
- </tr>
- <tr> 
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_bl.png" width="6" height="9"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom" class="boxartbottom"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_br.png" width="6" height="9"></td>
- </tr>
-</table> 
+<TMPL_IF NAME="BODY"><TMPL_VAR NAME=BODY></TMPL_IF>
+</div>
+
