--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -15,7 +15,6 @@ content="LFIw-oo_UpW85cg_ONvoPuH1IpWYjlfmipsWhOvo1kk" />
  <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery-1.3.2.min.js"></SCRIPT>
 
 <!-- Implementation of jQuery UI, first line javascript, second for css  -->
-
 <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery-ui-1.7.2.custom.min.js"></SCRIPT>
 
 <link rel="stylesheet" type="text/css" href="/CoGe/css/jquery-ui-1.7.2.custom.css" />
@@ -42,12 +41,7 @@ content="LFIw-oo_UpW85cg_ONvoPuH1IpWYjlfmipsWhOvo1kk" />
 <SCRIPT language="JavaScript">
 
 jQuery(document).ready(function(){ 
-  var anim_speed = jQuery.cookie('anim_speed');
-  if (! anim_speed){jQuery.cookie('anim_speed',600);}
   pageObj = new Object();
-  pageObj.speed = jQuery.cookie('anim_speed') || 600;
-  define_animation_speed(pageObj.speed)
-  //alert(pageObj.speed);
   if (jQuery.browser.msie)browserAlert();
   setup_button_states();
 });
@@ -124,27 +118,7 @@ function animate_section(name, style, speedy, show) {
   else if (style == "fadeOut") {jQuery(name).fadeOut(speedy);}
   return speedy;
  }
- 
- function define_animation_speed(val){
-   //alert(val);
-   val *= 1;
-   pageObj.speed = val;
-   jQuery.cookie('anim_speed',val);
-   var menu_html;
-   
-   if (val == 0){
-     menu_html = '<li><a href="#" target="_self" onClick="define_animation_speed(0)">&radic; Off</a></li><li><a href="#" target="_self" onClick="define_animation_speed(600)">Slow</a></li><li><a href="#" target="_self" onClick="define_animation_speed(400)">Medium</a></li><li><a href="#" target="_self" onClick="define_animation_speed(200)">Fast</a></li>';}
-   else{
-     if (val == 600){
-      menu_html = '<li><a href="#" target="_self" onClick="define_animation_speed(0)">Off</a></li><li><a href="#" target="_self" onClick="define_animation_speed(600)">&radic; Slow</a></li><li><a href="#" target="_self" onClick="define_animation_speed(400)">Medium</a></li><li><a href="#" target="_self" onClick="define_animation_speed(200)">Fast</a></li>';}
-     else if (val == 400){
-      menu_html = '<li><a href="#" target="_self" onClick="define_animation_speed(0)">Off</a></li><li><a href="#" target="_self" onClick="define_animation_speed(600)">Slow</a></li><li><a href="#" target="_self" onClick="define_animation_speed(400)">&radic; Medium</a></li><li><a href="#" target="_self" onClick="define_animation_speed(200)">Fast</a></li>';}
-     else{
-      menu_html = '<li><a href="#" target="_self" onClick="define_animation_speed(0)">Off</a></li><li><a href="#" target="_self" onClick="define_animation_speed(600)">Slow</a></li><li><a href="#" target="_self" onClick="define_animation_speed(400)">Medium</a></li><li><a href="#" target="_self" onClick="define_animation_speed(200)">&radic; Fast</a></li>';
-     }
-     }
-     jQuery('.animations').html(menu_html);
-}
+
 
 //set up the jquery ui button behavior
 function setup_button_states (id) {
@@ -207,7 +181,6 @@ $(document).ready( function() {
 </SCRIPT>
 
 <div id=signin_popup class="image_window" style="display:none"></div>
-<TABLE width = 100%>
 <TMPL_UNLESS NAME=MENU>
   <div style="float:right"><!-- open A -->
     <div style="float:right;margin-right: 73px;">
@@ -231,18 +204,17 @@ $(document).ready( function() {
 	  <li><a href="/wiki/index.php/Source_code" target="_self">CoGe Source Code</a></li>
 
 	 </ul>
-	</li>
-	<li><a href='javascript:void(0)'>Preferences</a>
+	</li>	<li><a href='javascript:void(0)'>Preferences</a>
 	 <ul>
 	   <li><a href="/CoGe/UserPage.pl" target="_self">User Profile</a></li>
-	  <li><a href="javascript:void(0)" target="_self">Animation</a>
+<!--	  <li><a href="javascript:void(0)" target="_self">Animation</a>
 	    <ul class="animations">
 	      <li><a href="javascript:void(0)" target="_self" onClick="define_animation_speed(0)">Off</a></li>
 	      <li><a href="javascript:void(0)" target="_self" onClick="define_animation_speed(600)">&radic; Slow</a></li>
 	      <li><a href="javascript:void(0)" target="_self" onClick="define_animation_speed(400)">Medium</a></li>
 	      <li><a href="javascript:void(0)" target="_self" onClick="define_animation_speed(200)">Fast</a></li>
 	     </ul>
-	   </li>
+	   </li>-->
 	  </ul>
 	 </li>
 	<li><a href='javascript:void(0)'>Help</a>
@@ -257,33 +229,14 @@ $(document).ready( function() {
 	</li>
 	</ul>
     </div>
-    <div style="float:right; padding: 4 10 0 0;">
-	<TMPL_IF NAME=LOGON>
-	<span class="small species">Welcome, <TMPL_VAR NAME=USER></span> <a href="/CoGe/index.pl?logout=1" class="small">Sign-out</a>
-	<TMPL_ELSE>
-	 <a href="javascript:void(0)" onClick=sign_in() class="small">Sign-in</a> <!-- onclick="login_popup()"  -->
-	</TMPL_IF>
-    </div>
 </div><!-- CLOSE A -->
-    
 </TMPL_UNLESS>
- <TR>
-  <TD>
-   <TABLE>
-    <TR>
-     <TD>
-      <TMPL_IF NAME=LOGO_PNG><div id=home_icon><a href="<TMPL_VAR NAME=HELP>" border=0><img src='/CoGe/picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></a></div></TMPL_IF>
-     </TD>
-     <TD>
-      <font class="title1" onclick=window.open("<TMPL_VAR NAME=HELP>")><TMPL_VAR NAME=TITLE></font>
-      <TMPL_IF NAME=DEV><br><span class=alert>WARNING: THIS IS A DEVELOPMENT SERVER</span><br>Software may not work, system may be down, etc.<br>Please use <a href="http://synteny.cnr.berkeley.edu/CoGe"> our production server: synteny.cnr.berkeley.edu/CoGe</a></TMPL_IF>
-     </TD>
-    </TR>
-   </TABLE>
-  </TD>
-  </TR>
-</TABLE>
 
+<div><TMPL_IF NAME=LOGO_PNG><img style="vertical-align: bottom;" onclick="window.open(<TMPL_VAR NAME=HELP>)" src='/CoGe/picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></TMPL_IF>
+      <span style="vertical-align: bottom; font-size: 1.5em")><TMPL_VAR NAME=TITLE></span>
+</div>
+      <TMPL_IF NAME=DEV><br><span class=alert>WARNING: THIS IS A DEVELOPMENT SERVER</span><br>Software may not work, system may be down, etc.<br>Please use <a href="http://synteny.cnr.berkeley.edu/CoGe"> our production server: synteny.cnr.berkeley.edu/CoGe</a></TMPL_IF>
+ 
 <noscript>
 Welcome to CoGe -- a new system for a new kind of comparative genomics.  CoGe is designed for easily visualizing, comparing, and understanding the evolution, struture and dynamics of genomes.
 
